# SecureStep-RAG

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  FRONTEND_COMPLETE.md  GITHUB_PUSH_GUIDE.md  IMPLEMENTATION_COMPLETE.md  Makefile  PAPER.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  WEBSOCKET_API.md  WEBSOCKET_IMPLEMENTATION.md  docker-compose.yml  main.py  pyproject.toml  quick-start.bat  quick-start.sh  verify-websocket-setup.py
.github/workflows/: ci.yml  docker.yml
attack/: AMPLIFICATION_INTEGRATION.md  HIJACK_INTEGRATION.md  __init__.py  amplification_attack.py  amplification_examples.py  cascade_attack.py  corpus_injector.py  drift_attack.py  garak_runner.py  hijack_attack.py  hijack_examples.py  pyrit_runner.py
benchmark/: build_dataset.py  push_to_hub.py
benchmark/data/: clean_docs.jsonl  hop_queries.jsonl  injected_docs.jsonl
configs/: eval.yml  models.yml  pipeline.yml
dashboard/: PipelineStreamer.tsx
eval/: ablation.py  baseline_comparison.py  cross_model_eval.py  deepeval_suite.py  latency_benchmark.py  phoenix_tracer.py  ragas_eval.py  wandb_logger.py
frontend/: README.md  SETUP.md  VERIFICATION.md  index.html  package.json  start.bat  start.sh  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: HopTrace.tsx  Sidebar.tsx  TrustBar.tsx
frontend/src/hooks/: usePipeline.ts
frontend/src/pages/: AttackStudio.tsx  Benchmark.tsx  Evaluation.tsx  Pipeline.tsx  Status.tsx  TrustInspector.tsx
frontend/src/types/: index.ts
guardrails/: HOP_TRANSITION_INTEGRATION.md  config.yml
guardrails/rails/: hop_transition_rail.co  input_rail.co  output_rail.co  retrieval_rail.co
models/: embedding_loader.py  llm_loader.py
notebooks/: 01_exploration.ipynb  02_attack_demo.ipynb  03_results_analysis.ipynb
pipeline/: __init__.py  confidence.py  generator.py  graph.py  reformulator.py  retriever.py
tests/: test_amplification_attack.py  test_attack.py  test_calibration.py  test_explainer.py  test_guardrails.py  test_hijack_attack.py  test_main_api.py  test_pipeline.py  test_trust_filter.py
trust_filter/: CALIBRATION_INTEGRATION.md  INTEGRATION.md  __init__.py  calibration.py  drift_detector.py  example_usage.py  explainer.py  filter.py  hop_scorer.py  injection_scorer.py  semantic_scorer.py  source_scorer.py
vector_store/: indexer.py  qdrant_client.py
